infra/k8s-dev/ingress-srv-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blogs-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: blogs.dev
    http:
      paths:
      - path: /api/users/?(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-srv
            port:
              number: 3000
      - path: /api/comments/?(.*)
        pathType: Prefix
        backend:
          service:
            name: comment-srv
            port:
              number: 4000
      - path: /api/posts/?(.*)
        pathType: Prefix
        backend:
          service:
            name: post-srv
            port:
              number: 5000
      - path: /api/blogs/?(.*)
        pathType: Prefix
        backend:
          service:
            name: query-srv
            port:
              number: 6000
